Fixed the Text the Studio box wrapping in Safari & iOS

--- a/sass/_partials/_listen-now.scss
+++ b/sass/_partials/_listen-now.scss
@@ -31,6 +31,7 @@
         position: relative;
         z-index: 3;
 
+
         .current-track {
             @include flex-shrink(0);
         }
@@ -171,6 +172,7 @@
             @include display-flex;
             @include flex-direction(column);
             position: relative;
+            min-height: 80px;
             width: 50%;
             z-index: 2;
 
